sample/error/eval_nd-var_module.bfr
module B = import "../misc/import_b.bfr"

let _ = B:c

codegen []